--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
     <script>
         $(document).ready(function(){
             $('.bxslider').bxSlider({
-                auto: true,
+                auto: false,
                 pause: 3000,
                 mode: 'horizontal',
                 captions: true,
                 slideWidth: 600,
+                infiniteLoop: false
             });
         });
     </script>
