--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <style>
         .bx-wrapper img {
             width: 100%;
-            border-radius: 10px;
+            border: none;
+        }
+        .bxslider li {
+            margin: 0;
+            padding: 0;
         }
     </style>
 </head>
