--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Horizontal Slide Show</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <style>
+        .bx-wrapper {
+            margin: 0;
+            padding: 0;
+            border: none;
+        }
         .bx-wrapper img {
             width: 100%;
             border: none;
